# satik

./: .gitignore  Anchor.toml  Dockerfile  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_table__.json  a.json  bun.lockb  keyfile.json  keyfile1.json  keypair.json  package-lock.json  package.json
app/: bun.lockb  index.html  ipfs.js  package-lock.json  package.json  proof.ucan  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1712085272308-a2555e8d5caa3.mjs
app/anchor/: idl.json  useWorkspace.js  utils.ts
app/public/: index.html  loading.html  test.ts
app/public/loading_files/: desktopCommon.b78dc01d.bundle.js  desktopEntry.a4e46699.bundle.js  (+4 more)
app/src/: App.vue  main.js  store.js  style.css
demo-backend-redeemer/: Anchor.toml  index.js  package-lock.json  package.json
payment-client/: idl.json  index.html  package-lock.json  package.json  vite.config.ts
payment-client/src/: main.ts
programs/satik/: Cargo.toml
satik_cpm/: .gitignore  Anchor.toml  Cargo.toml  bun.lockb  index.ts  package.json
satik_cpm/keypairs/: creator1.json  oracle1.json  queue.json  sb_request.json  sb_request1.json
satik_cpm/src_js/: constants.ts  test1.ts
satik_cpm/switchboard-functions/api_feed/: Cargo.toml  Dockerfile
satik_cpm/switchboard-functions/api_feed/src/: main.rs  models.rs
satik_cpm/tests/: index.ts  satik.ts
src_js/: index.ts  oracle.ts  routineFunctions.js  test1.ts  test2.ts
switchboard-functions/api_feed/: Cargo.toml  measurement.txt
tests/: index.ts.backup  payment.ts.backup  practice.ts.backup  satik.ts
(+87 files in other folders)
