[package]
name = "api_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "api_feed"
path = "src/main.rs"

[dependencies]
borsh = { "version" = "1.4.0", "features" = ["derive"] }
# borsh = "1.4.0"
reqwest = "0.12.2"
# serde = { "version" = "1.0.197", "features" = ["derive"] }
# serde_json = "1.0.115"
# solana-sdk = "1.18.8"
switchboard-solana = { "version" = "0.29.99", "features" = ["macros"] }
tokio = "1.36.0"
